--- a/style.css
+++ b/style.css
@@ -124,3 +124,13 @@
     color: white;
     font-weight: 700;
   }
+
+  @viewport{
+    zoom:1.0;
+    width:extend-to-zoom;
+  }
+
+  @-ms-viewport{
+    width: extend-to-zoom;
+    zoom: 1.0;
+  }
