--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 .topnav {
     background-color: #333;
     overflow: hidden;
+    position: fixed;
   }
   
   /* Style the links inside the navigation bar */
@@ -12,7 +13,7 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-    position:sticky;
+    
   }
   
   /* Change the color of links on hover */
@@ -115,7 +116,7 @@
     border-color: green;
   }
 
-  #send{
+  #sendb{
     width: 120px;
     height: 50px;
     margin-bottom: 10px;
